added two main sections; styled the controller of the feeds

--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132826687-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
     
-      gtag('config', 'UA-132826687-2');
-    </script>
 
 
 </head>
@@ -37,7 +29,20 @@
 
 
     <main>
-        
+        <section id="feedWrap">
+            <div id="feedControl">
+                <div>
+                    <a href="#" value="active">News Feed</a>
+                    <a href="#">Twitter Feed</a>
+                </div>
+                <a href="#"><i class="fas fa-sort"></i></a>
+            </div>
+        </section>
+
+
+        <aside id="widgetsWrap">
+
+        </aside>
     </main>
 
 
