--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 
 </head>
 <body>
-    <div id="loading">
-        <img src="media/Spinner-1s-200px (1).gif" />
-        <span>Searching news...</span>
-    </div>
+    
     <header>
-        <a href="#" id="brand"><span id="brandOne">TOURIST</span><span id="brandTwo">BLOG</span></a>
+        <a href="#" id="brand"><span id="brandOne">NEWS</span><span id="brandTwo">AGGREGATOR</span></a>
         <form class="searchForm focusControl">
             <i class="fas fa-search"></i>
             <input id="searchInput" type="search" />
@@ -40,10 +37,10 @@
                     <button type="button" value="sports">Sports</button>
                     <button type="button" value="technology">Technology</button>
                 </div>
-                <a href="#"><i class="fas fa-sort"></i></a>
+                
             </div>
             <div id="feedContent">
-                <!-- <article>
+                <article>
                     <span><i class="fas fa-stopwatch"></i> 3 hours ago</span>
                     <div>
                         <div>
@@ -72,7 +69,7 @@
                                 <a href='"https://www.wired.com/story/hollywood-does-blockchain-with-not-disastrous-results/'>Read this article on TechCrunch</a>
                             </div>
                         </div>
-                    </article> -->
+                    </article>
             </div>
         </section>
 
@@ -85,7 +82,7 @@
 
     <footer>
         <div>
-            <span>&#9400; 2019 TOURISTBLOG</span>
+            <span>&#9400; 2019 NEWSAGGREGATOR</span>
         </div>
         <div>
             <a href="#">Terms of Service</a>
