--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <section id="feedWrap">
             <div id="feedControl">
                 <div id="feedOptions">
-                    <button type="button" value="top" class="active">Top News</button>
-                    <button type="button" value="sports">Sports</button>
-                    <button type="button" value="technology">Technology</button>
+                    <button type="button" value="top" class="active"><i class="fas fa-newspaper"></i> Top News</button>
+                    <button type="button" value="sports"><i class="fas fa-futbol"></i> Sports</button>
+                    <button type="button" value="technology"><i class="fas fa-laptop"></i> Technology</button>
                 </div>
                 
             </div>
@@ -75,7 +75,34 @@
 
 
         <aside id="widgetsWrap">
-            <p>hello</p>
+            <div class="widget" id="exchangeWrap">
+                <h3>Exchange Rates <i class="fas fa-exchange-alt"></i></h3>
+                <form>
+                    <div class="form-group">
+                        <label for="base">Select the base</label>
+                        <select id="base">
+                            <option value="EUR">EUR</option>
+                            <option value="USD">USD</option>
+                            <option value="RON">RON</option>
+                        </select>
+                    </div>
+                    <div class="form-group" id="dropdownWrap">
+                        <button type="button" class="dropdownBtn">Choose One <span></span></button>
+                        <div class="dropdown">
+                            <button type="submit" id="exchangeBtn">Get Rates</button>
+                            <ul>
+                                <li><input type="checkbox" value="a" /> a</li>
+                                <li><input type="checkbox" value="b" /> b</li>
+                                <li><input type="checkbox" value="c" /> c</li>
+                                <li><input type="checkbox" value="d" /> d</li>
+                            </ul>
+                        </div>
+                    </div>
+                </form>
+                <div id="exchangeOutput">
+                </div>
+            </div>
+            
         </aside>
     </main>
 
