--- a/index.html
+++ b/index.html
@@ -87,14 +87,11 @@
                         </select>
                     </div>
                     <div class="form-group" id="dropdownWrap">
-                        <button type="button" class="dropdownBtn">Choose One <span></span></button>
+                        <button type="button" class="dropdownBtn">Choose rates <span></span> <i class="fas fa-caret-down"></i></button>
                         <div class="dropdown">
                             <button type="submit" id="exchangeBtn">Get Rates</button>
                             <ul>
-                                <li><input type="checkbox" value="a" /> a</li>
-                                <li><input type="checkbox" value="b" /> b</li>
-                                <li><input type="checkbox" value="c" /> c</li>
-                                <li><input type="checkbox" value="d" /> d</li>
+                                
                             </ul>
                         </div>
                     </div>
